created an application called StudentManagerApp, Added Model claass called student, Ran migration for student and added data folder as well as ApplicationDbContext inside it.

--- a/StudentManagerApp/Pages/Students/Create.cshtml
+++ b/StudentManagerApp/Pages/Students/Create.cshtml
@@ -4,12 +4,13 @@
 <h2>Add Student</h2>
 
 <form method="post">
-    <label>Name:</label>
-    <input asp-for="StudentName" />
+    <div>
+        <label>Name:</label>
+        <input asp-for="Student.Name" />
+        <span asp-validation-for="Student.Name"></span>
+    </div>
 
     <button type="submit">Save</button>
 </form>
-
-<p>@Model.Message</p>
 
 <a asp-page="Index">Back</a>
